--- a/index.html
+++ b/index.html
@@ -119,3 +119,17 @@
 </body>
 </html>
 <a href="#contact">Contact</a>
+
+<section id="contact">
+  <h2>Contactez-nous</h2>
+  <form action="mailto:tonemail@example.com" method="post" enctype="text/plain">
+    <label for="nom">Nom :</label>
+    <input type="text" id="nom" name="nom" required><br><br>
+    <label for="email">Email :</label>
+    <input type="email" id="email" name="email" required><br><br>
+    <label for="message">Message :</label><br>
+    <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
+    <input type="submit" value="Envoyer">
+  </form>
+</section>
+
