--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 <section id="contact">
   <h2>Contactez-nous</h2>
-  <form action="mailto:tonemail@example.com" method="post" enctype="text/plain">
+  <form action="mailto:moncoeurtendres@gmail.com" method="post" enctype="text/plain">
     <label for="nom">Nom :</label>
     <input type="text" id="nom" name="nom" required><br><br>
     <label for="email">Email :</label>
